# BoredOS

./: .gitignore  .gitmodules  FRAMEBUFFER_VFS_GUIDE.md  Makefile  NOTICE  README.md  build_log.txt  limine.conf  update_copyright.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: nightly.yml
arch/: boot.asm  fpu.asm  process_asm.asm  syscalls.asm
core/: errno.h  io.h  kconsole.c  kconsole.h  kutils.c  kutils.h  main.c  man_entries.h  panic.c  panic.h  platform.c  platform.h  version.c  version.h
dev/: ac97.c  ac97.h  ahci.c  ahci.h  disk.h  disk_manager.c  pci.c  pci.h  pcsk.c  pcsk.h  ps2.c  rtc.c
docs/: README.md
docs/appdev/: custom_apps.md  elf_metadata.md  framebuffer_drawing.md  inputs_api_(utf8).md  libc_reference.md  nova_development.md  nova_overview.md  sdk_reference.md  syscalls.md  tcc.md
docs/architecture/: README.md
docs/installation/: README.md  install_guide.md
fs/: bootfs.c  bootfs.h  ext4_config.h  ext4fs.c  ext4fs.h  fat32.c  fat32.h  inttypes.h  lz4.c  lz4.h  mkfs_fat32.c  mkfs_fat32.h  procfs.c  procfs.h  shm.c  sysfs.c  sysfs.h  tar.c  tar.h  vfs.c  vfs.h
graphics/: graphics.c  graphics.h  vga.c
input/: keyboard.c  keyboard.h
mem/: memory_manager.c  memory_manager.h  paging.c  paging.h
net/: icmp.h  lwip_port.c  lwipopts.h  network.c  network.h  unix_socket.c  unix_socket.h
src/userland/mlibc/sysdeps/boredos/: boredos-x86_64.cross  meson.build
src/userland/mlibc/sysdeps/boredos/generic/: entry.cpp  sysdeps.cpp
src/userland/mlibc/sysdeps/boredos/include/abi-bits/: access.h  auxv.h  blkcnt_t.h  blksize_t.h  clockid_t.h  dev_t.h  errno.h  fcntl.h  fd_set.h  fsblkcnt_t.h  fsfilcnt_t.h  gid_t.h  in.h  ino_t.h  ipc.h  limits.h  mode_t.h  mqueue.h  msg.h  nlink_t.h  pid_t.h  poll.h  resource.h  rlim_t.h  sa_family_t.h  seek-whence.h  sem.h  shm.h  sig-limits.h  sigevent.h  signal.h  sigset_t.h  sigval.h  sockaddr_storage.h  socket.h  socklen_t.h  stat.h  statvfs.h  suseconds_t.h  termios.h  (+7 more)
src/userland/mlibc/sysdeps/boredos/include/bits/: syscall.h
src/userland/mlibc/sysdeps/boredos/include/mlibc/: sysdeps.hpp
src/userland/mlibc/sysdeps/boredos/x86_64/: crt1.S  signals.S
sys/: app_metadata.c  cmd_stub.c  elf.c  file_index.c  idt.c  idt.h  kernel_subsystem.c  kernel_subsystem.h  lapic.h  module_manager.c  module_manager.h  process.c  process.h  pty.c  smp.c  smp.h  syscall.c  syscall.h  sysfs_init.c  sysfs_net.c  tty.c
tools/: fetch_external.sh  gen_excludes.sh  gen_userland_note.sh
(+252 files in other folders)
